--- a/HW2/settings.gradle
+++ b/HW2/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Hello Toast"
+rootProject.name = "Hello Constraint"
 include ':app'
