--- a/HW6/HW6-2/108820028_HW6-2/local.properties
+++ b/HW6/HW6-2/108820028_HW6-2/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 18 23:31:19 CST 2022
-sdk.dir=C\:\\Users\\kta23\\AppData\\Local\\Android\\Sdk
+#Sun Mar 20 09:44:42 CST 2022
+sdk.dir=/Users/Eddie/Library/Android/sdk
