finish HW7-1 and prepare for HW7-2

--- a/HW7/HW7-1/108820028_HW7-1/app/src/main/AndroidManifest.xml
+++ b/HW7/HW7-1/108820028_HW7-1/app/src/main/AndroidManifest.xml
@@ -10,6 +10,30 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.108820028_HW71">
         <activity
+            android:name=".IceCreamActivity"
+            android:exported="false"
+            android:label="IceCreamActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
+            android:name=".FroyoActivity"
+            android:exported="false"
+            android:label="FroyoActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
+            android:name=".DonutActivity"
+            android:exported="false"
+            android:label="DonutActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
