--- a/HW7/HW7-2/108820028_HW7-2/app/src/main/AndroidManifest.xml
+++ b/HW7/HW7-2/108820028_HW7-2/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:theme="@style/Theme.108820028_HW72">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.108820028_HW72.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
