--- a/HW7/HW7-2/108820028_HW7-2/app/src/main/AndroidManifest.xml
+++ b/HW7/HW7-2/108820028_HW7-2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.108820028_HW72">
         <activity
+            android:name=".DescriptionActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
